--- a/001-025/002/global.css
+++ b/001-025/002/global.css
@@ -29,7 +29,8 @@ body {
     flex: 0.5;
     margin: 10px;
     position: relative;
-    -webkit-transition: all 700ms ease-in;
+    /* -webkit-transition: all 700ms ease-in; */
+    transition: all 700ms ease-in-out;
 }
 
 .panel h3 {
