Add : 004 CSS, Navigation Rotate

--- a/001-025/003/global.css
+++ b/001-025/003/global.css
@@ -54,6 +54,11 @@ body {
     transition: 400ms, ease;
 }
 
+/* 
+ * The most elegent thought is separating the progress and
+ * circle using z-index
+ */
+
 .circle {
     background-color: #fff;
     color: #e2e2e2;
