Feat : update 008 split landing page

--- a/001-025/008/global.css
+++ b/001-025/008/global.css
@@ -74,7 +74,7 @@ h1 {
 
 .split.left,
 .split.right {
-    transition: all 400ms ease-in-out;
+    transition: all 400ms ease-out;
 }
 
 .hover-left .left {
